[gd_scene load_steps=10 format=3 uid="uid://cgnvnafeimiba"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_7pk16"]
[ext_resource type="Texture2D" uid="uid://c85pbu4fm36tl" path="res://Backgrounds/Dojo BG.png" id="2_wr66a"]
[ext_resource type="Texture2D" uid="uid://l1cfoas4cjws" path="res://Backgrounds/Mountain BG.png" id="3_tbp84"]
[ext_resource type="Texture2D" uid="uid://bcpcths270crb" path="res://Backgrounds/Great Wave BG.png" id="4_jcg48"]
[ext_resource type="Texture2D" uid="uid://8h6q7iugqfhj" path="res://Sprites/Game Over.png" id="5_2rban"]
[ext_resource type="Texture2D" uid="uid://c0fe7ywqhtg24" path="res://Sprites/Mario Arrow.png" id="6_4ttub"]
[ext_resource type="SpriteFrames" uid="uid://buc7a5lpc3ch4" path="res://Animations/Ninja.tres" id="6_672ls"]
[ext_resource type="Script" path="res://Scripts/GameOverArrow.gd" id="7_pkxk4"]
[ext_resource type="AudioStream" uid="uid://buuw4y5inqeub" path="res://Music/Game Over.mp3" id="8_chae4"]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_7pk16")

[node name="DojoBG" type="Sprite2D" parent="."]
visible = false
position = Vector2(840, 525.25)
scale = Vector2(1.64063, 1.41252)
texture = ExtResource("2_wr66a")

[node name="MountainBG" type="Sprite2D" parent="."]
visible = false
position = Vector2(840, 525.25)
scale = Vector2(1.64063, 1.41252)
texture = ExtResource("3_tbp84")

[node name="GreatWaveBG" type="Sprite2D" parent="."]
visible = false
position = Vector2(840, 525)
scale = Vector2(1.64063, 1.41319)
texture = ExtResource("4_jcg48")

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(800, 500)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_2rban")

[node name="BackArrow" type="TextureButton" parent="."]
offset_left = 30.0
offset_top = 31.0
offset_right = 209.0
offset_bottom = 215.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_4ttub")
script = ExtResource("7_pkxk4")

[node name="Ninja" type="AnimatedSprite2D" parent="."]
position = Vector2(1640, 900)
scale = Vector2(6, 6)
sprite_frames = ExtResource("6_672ls")
animation = &"Ninja"
speed_scale = 0.75

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_chae4")
volume_db = -15.0
autoplay = true

[connection signal="animation_finished" from="Ninja" to="." method="_on_ninja_animation_finished"]
